News item now displayed correctly on mobile

--- a/client/src/components/user/pages/Wissen/News/News.module.sass
+++ b/client/src/components/user/pages/Wissen/News/News.module.sass
@@ -29,6 +29,15 @@
     align-items: flex-start
     padding: 2rem 4rem 2rem 2rem
     height: 14rem
+    @media(max-width: 880px)
+      flex-direction: column
+      align-items: center
+      height: auto
+      padding: 2rem
+      &--image
+        margin-right: 0
+      &--text
+        max-width: 500px
     &--image 
       // width: 14rem
       height: 100%
